--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-select": "^5.7.4",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
